--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -90,9 +90,14 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Esittely</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                	<p>Vuonna 2012, kolme Pasilasta kotoisin olevaa ruokaa ja yhteisöllisyyttä arvostavaa ystävää päättivät lyödä intohimoiset päänsä yhteen ja perustaa Pizza Blue:n.<br><br>
+Pizza Blue:n arvoihin kuuluu kotimaisten, lähellä tuotettujen raaka-aineiden käyttö, sekä pyrkimys mahdollisimman pieneen hiilijalanjälkeen. Haluamme tarjota asiakkaillemme myös mahdollisuuden 					tukea kotimaista työvoimaa hyödyntämällä myös muiden kotimaisten yrittäjien tarjoamia palveluita tuottaessamme aidosti kotimaisen makuelämyksen. 
+<br><br>
+Pizzeriassamme on laaja valikoima pizzoja, josta erilaisia ruokavaliota noudattavatkin voivat löytää jotain nautittavaa.
+<br><br>
+Pizzapohjamme on saanut myös tunnustusta useamman kerran kansainvälisessä <i>The Best Pizza In The Whole Wide World (TBPITWWW)</i> kilpailun parhaan pizzapohjan kategoriassa sijoittumalla kolmen 										parhaan joukkoon vuosina 2012-2014.
+					</p>
+             
             </div>
         </div>
     </section>
