yhteystiedot ja aukioloajat lisätty

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -18,7 +18,7 @@
     <link href="css/grayscale.css" rel="stylesheet">
     
     <!-- Team Blue CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/teamblue_styles.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -126,16 +126,24 @@ Pizzapohjamme on saanut myös tunnustusta useamman kerran kansainvälisessä <i>
 
     <!-- Contact Section -->
     <section id="yhteystiedot" class="container content-section text-center">
-    <h2>Yhteystiedot</h2>
+    <br><h2>Yhteystiedot</h2>
     <div class="row">
             <div class="col-lg-6">
-            <h3>Pizza Blue</h3><p><br>Ratapihantie 13<br>00520 HELSINKI</p><br>
-                <ul class="list-inline banner-social-buttons">
+            <br><h3 class="yt-nimi">Pizza Blue</h3>
+            <p>Ratapihantie 13<br>
+            00520 HELSINKI<br>
+            Puh. 012 3456789<br>
+            pizzablue@sahkoposti.fi</p><br>
+            <p class="palvelemme">Palvelemme:</p>
+            <p>Ma - to ja su 10 - 21<br>
+            Pe - la 10 - 22<br>
+            
+                </p><ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://facebook.com" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://twitter.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
                         <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
