--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -10,6 +10,9 @@
     <meta name="author" content="">
 
     <title>Pizza Blue</title>
+    
+    
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +49,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> LOGO <span class="light">Pizza</span> Blue
+                    <i class="fa"><img src="img/pieni_logo.png" style="height:30px"></i><span class="light"> Pizza</span> Blue
                 </a>
             </div>
 
@@ -77,10 +80,9 @@
     <header class="intro">
         <div class="intro-body">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Pizza Blue</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                <div class="row"><br><br>
+                    <div class="col-lg-12">
+               			<img src="img/iso_logo.png" class="img-responsive center-block col-xs-12" alt="Responsive image">
                         <a href="#esittely" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
