--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -80,12 +80,16 @@
     <header class="intro">
         <div class="intro-body">
             <div class="container">
-                <div class="row"><br><br>
-                    <div class="col-lg-12">
-               			<img src="img/iso_logo.png" class="img-responsive center-block col-xs-12" alt="Responsive image">
-                        <a href="#esittely" class="btn btn-circle page-scroll">
+                <div class="row">
+                <div class="col-lg-1"></div>
+                    <div class="col-lg-10">
+               		<img src="img/iso_logo.png" class="img-responsive center-block col-xs-12" alt="Responsive image"> 
+                 </div></div>
+                 <div class="col-lg-1"></div>
+                 <div class="row">
+                 	<a href="#esittely" class="btn btn-circle page-scroll center-block">
                             <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                    </a>
                     </div>
                 </div>
             </div>
