--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -36,10 +36,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
 <!--tähtiarvionti-->
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-
-<link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
 
 </head>
@@ -212,7 +210,7 @@ Pizzapohjamme on saanut myös tunnustusta useamman kerran kansainvälisessä <i>
     <script>
 $(document ).ready(function (){
 	$("#input-22").rating({
-    	starCaptions: {1: "Very Poor", 2: "Poor", 3: "Ok", 4: "Good", 5: "Very Good"},
+    	starCaptions: {1: "Huono", 2: "Kehno", 3: "Kohtalainen", 4: "Hyvä", 5: "Erinomainen"},
     	starCaptionClasses: {1: "text-danger", 2: "text-warning", 3: "text-info", 4: 	"text-primary", 5: "text-success"},
 	});
 });
